labs/03-kyverno-policies/01-match-httproute/httpbin-good.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: httpbin
spec:
  parentRefs:
    - name: my-gateway
      namespace: kgateway-system
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /status/200
      backendRefs:
        - name: httpbin
          port: 8000
