labs/03-kyverno-policies/01-match-httproute/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: mock-values
policies:
  - name: quiz
    rules:
      - name: match-httproute-creation
        values:
          secPoliciesTargetRefs: ["httpbin"]
